--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   ffmpeg_kit_flutter: ^5.1.0
   process_run: ^0.12.5
   intl: ^0.18.0
+  flutter_markdown: ^0.6.13
+  markdown: ^6.0.1
 
 dev_dependencies:
   flutter_test:
